# inkctl

./: .gitignore  CMakeLists.txt  Dockerfile.toolchain  KubectlRunner.h  Main.qml  README.md  build-and-deploy.sh  main.cpp
.github/workflows/: build-toolchain.yml  release.yml
scripts/: inkctl-display.service  inkctl.service  paper-dashboard-display.service  paper-dashboard.service  start_k3s.sh
